# minecraft-data

./: .gitignore  Cargo.toml  build.rs
src/: lib.rs
src/schemas/: biomes.rs  block_collision_shapes.rs  block_loot.rs  blocks.rs  commands.rs  effects.rs  enchantments.rs  entities.rs  entity_loot.rs  foods.rs  instruments.rs  items.rs  language.rs  map_icons.rs  materials.rs  mod.rs  particles.rs  protocol_versions.rs  recipes.rs  tints.rs  version.rs  windows.rs
src/schemas/protocol_types/: entity_metadata_item.rs  entity_metadata_loop.rs  mod.rs
