[package]
name = "minecraft-data"
version = "0.1.0"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
convert_case = "0.4.0"
schemafy_lib = "0.6.0"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"
