[package]
name = "minecraft-data"
version = "0.1.0"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
convert_case = "0.4.0"
schemafy_lib = "0.6.0"
proc-macro2 = "1.0.33"
quote = "1.0.10"

[dependencies]
include_dir = "0.7.2"
lazy_static = "1.4.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"